# CMakeTemplate

./: .gitignore  README.md
Scripts/: build-llvm.py  build.bat  cmake-all-in-one.py  generate.bat  generate_ninga.bat  generate_vs.bat
Template01_SingleExe/: CMakeLists.txt
Template03_DynamicLibrary/: CMakeLists.txt
Template04_Deploy/include/: util.h
Template05_SubProject/SharedLibrary/include/: print.h
Template05_SubProject/SharedLibrary/src/: print.cpp
Template06_WindowsSubsystem/src/: main.cpp
Template07_WindowsResource/: CMakeLists.txt
Template07_WindowsResource/resource/: resource.rc
Template07_WindowsResource/src/: main.cpp
Template08_FindPackage/: CMakeLists.txt
Template08_FindPackage/src/: main.cpp
TemplateDeploy/: CMakeLists.txt
TemplateDeploy/include/: util.h
TemplateDeploy/src/: util.cpp
TemplateDynamicLibrary/: CMakeLists.txt
TemplateDynamicLibrary/include/: util.h
TemplateDynamicLibrary/src/: util.cpp
TemplateLib/include/: util.h
TemplateSingleExe/: CMakeLists.txt
TemplateSingleExe/include/: util.h
TemplateSingleExe/src/: main.cpp  math.cpp
TemplateStaticLibrary/: CMakeLists.txt
TemplateSubProject/: CMakeLists.txt
TemplateSubProject/FinalExe/: CMakeLists.txt
TemplateSubProject/FinalExe/src/: main.cpp
TemplateSubProject/LinkedLibrary/: CMakeLists.txt
TemplateSubProject/LinkedLibrary/include/: util.h
TemplateSubProject/LinkedLibrary/src/: util.cpp
TemplateSubProject/SharedLibrary/: CMakeLists.txt
TemplateSubProject/SharedLibrary/include/: print.h
TemplateSubProject/SharedLibrary/src/: print.cpp
TemplateWindowsSubsystem/: CMakeLists.txt
